2008-03-16  Callum McKenzie  <callum@spooky-possum.org>

	* invest/invest-applet.py (_check): Remove glade functions that
	slipped through the patch.

	* invest/__init__.py
	* invest/invest-chart
	* invest/quotes.py
	* invest/chart.py
	* invest/preferences.py
	* invest/defs.py.in
	* invest/widgets.py
	* data/financialchart.ui
	* data/prefs-dialog.ui
	* data/Makefile.am: Convert from glade to gtk-builder. Patch from
	Jaap Haitsma (bug #521082).

2007-10-14  Callum McKenzie  <callum@spooky-possum.org>

	* invest/quotes.py (QuoteUpdater.populate): 
	* invest/preferences.py (PrefsDialog.__init__): Sort the stocks
	list so we aren't stuck with the random list given by python's
	dict iterator. As per Matt Chisholm's patch in bug #460080. Also
	removed some commented-out old versions of some code (svn is for
	storing that sort of thing).

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* invest/quotes.py (QuoteUpdater.populate): Avoid a division by
	zero when nothing was paid for stocks. (Bug #459116)

	* invest/about.py (show_about): Removed a dead URL from the about
	dialog. Matt Chisholm/Andrew Burton (Bug #460087).

	* invest/applet.py (ProgramWindow.__init__): Make the pop-up
	window non-resizeable at the suggestion of Matt Chisholm (Bug
	#461345). This means that the window auto-sizes and takes into
	account space left by stocks removed from the drop-down list.

2007-07-30  Claude Paroz <claude@2xlibre.net>

	* invest/about.py: Corrected utf8 to utf-8. Fixes bug #459086.

2007-07-17  Jaap Haitsma  <jaap@haitsma.org>

	* invest/about.py: Use "program-name" property of GtkAboutdDialog.
	"name" does not work anymore in gtk 2.12

2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* invest/about.py:
	Update the encoding to be utf8

2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* invest/quotes.py:
	Fix error when yahoo returns N/A. Fixes bug #413603

2007-05-07  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* invest/widgets.py: