@@ -1,5 +1,8 @@
 2008-03-16  Callum McKenzie  <callum@spooky-possum.org>
 
+	* invest/applet.py: Patch from emil@nishra.com to make the
+	right-click menu work for the entire applet. (Bug #522274.)
+
 	* invest/invest-applet.py (_check): Remove glade functions that
 	slipped through the patch.
 
